# MachineLearning

./: .dockerignore  .env.example  .gitignore  CONTEXTO_PROYECTO_MLOPS.md  Dockerfile  Evaluacion1.md  Guia_Completa_Analisis_Datos.ipynb  MEJORAS_PRINCIPIANTES.md  README.md  REPRODUCIBILIDAD.md  TODO_LIST.md  demo_analisis_datos.py  docker-compose.yaml  instrucciones.md  publish_data.bat  pyproject.toml  requirements.txt  temp_run_pipeline.py  temp_run_pipeline_manual.py  test_simple_functions.py
.dvc/: config
analisis-lenguajes-programacion/src/analisis_lenguajes_programacion/: settings.py
analisis-lenguajes-programacion/src/analisis_lenguajes_programacion/pipelines/data_analysis/: nodes.py
conf/base/: catalog.yml  parameters.yml  parameters_data_science.yml  parameters_procesamiento_de_datos.yml
config/: airflow.cfg
dags/: kedro_ml_pipeline_dag.py
data/05_model_input/: datos_para_modelado.parquet.dvc
data/06_models/: clasificacion_model.pkl.dvc  regresion_model.pkl.dvc
data/08_reporting/: classification_confusion_matrices.json.dvc  metrics.json.dvc  metrics_clf.json.dvc
docs/: DATA_LICENSES.md
docs/informe_v1/: INFORME_MERCADO_TECH_CHILE.md
docs/jetbrains_2025/: README_JETBRAIN.md  developer_ecosystem_2025_external_questions.csv
docs/referencias/: docker_SUMMARY.md
docs/stackoverflow_2023/: README_SO.md
notebooks/: 01_exploratory_analysis.ipynb  02_analisis_de_resultados.ipynb
scripts/: run_project.sh
src/analisis_lenguajes_programacion/: pipeline_registry.py
src/analisis_lenguajes_programacion/pipelines/data_analysis/: nodes.py  pipeline.py
src/ml_analisis_ecosistema_dev/: __init__.py  __main__.py  pipeline_registry.py
src/ml_analisis_ecosistema_dev/pipelines/clasificacion/: nodes.py  pipeline.py
src/ml_analisis_ecosistema_dev/pipelines/procesamiento_de_datos/: __init__.py  nodes.py  pipeline.py
src/ml_analisis_ecosistema_dev/pipelines/regresion/: nodes.py  pipeline.py
tests/: conftest.py
tests/pipelines/data_analysis/: test_pipeline.py
tests/pipelines/procesamiento_de_datos/: test_pipeline.py
